--- a/lab3.html
+++ b/lab3.html
@@ -2,17 +2,20 @@
 <head>
 <style>
 div
-{  border-radius:200px200px;
-   -webkit-border-radius:200px200px;
-   -moz-border-radius:200px200px;
-   color:purple;
-   height:400px
- background-color:red;
- border-radius:200px 200px;
- -webkit-border-radius:200px 200px;
- -moz-border-radius:200px 200px;
- height:300px;
- width:300px}
+{ :https://zhongyanlin.github.io/site/wywgcss/editcss.css;
+border-top-style:solid;
+border-top-width:20px;
+border-right-style:solid;
+border-bottom-style:solid;
+border-bottom-width:20px;
+border-left-style:solid;
+border-left-width:20px;
+border-top-color:vifrication;
+border-bottom-color:vifrication;
+border-left-color:red;
+color:purple;
+height:0;
+width:0}
 </style>
 <body>
 <div></div>
