--- a/lab42.html
+++ b/lab42.html
@@ -1,80 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Ellipse and Resume</title>
+    <title>简小丽 - 简历</title>
     <style>
-        /* Ellipse Animation */
+        /* Animated Ellipse Styles */
         .ellipse-container {
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #000;
+            padding: 2rem;
         }
 
-        .ellipse {
-            width: 200px;
-            height: 100px;
-            background: radial-gradient(circle, #ff7e5f, #feb47b);
+        .animated-ellipse {
+            width: 300px;
+            height: 150px;
             border-radius: 50%;
-            animation: gradientAnimation 5s infinite;
+            animation: gradientMove 4s ease infinite;
+            background: radial-gradient(circle at 50% 50%, 
+                #ff6b6b, 
+                #4ecdc4, 
+                #45b7d1);
+            background-size: 400% 400%;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
 
-        @keyframes gradientAnimation {
-            0% {
-                background: radial-gradient(circle, #ff7e5f, #feb47b);
-            }
-            50% {
-                background: radial-gradient(circle, #feb47b, #ff7e5f);
-            }
-            100% {
-                background: radial-gradient(circle, #ff7e5f, #feb47b);
-            }
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
-        /* Resume Layout */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        /* Resume Grid Styles */
+        .resume-grid {
             display: grid;
-            grid-template-columns: 1fr 2fr;
-            grid-template-rows: auto auto auto;
-            gap: 20px;
-            padding: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1.5rem;
+            padding: 2rem;
+            max-width: 1000px;
+            margin: 0 auto;
+            font-family: 'Segoe UI', Arial, sans-serif;
         }
 
-        header {
+        .section {
+            background: #f8f9fa;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .personal-info {
             grid-column: 1 / -1;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+        }
+
+        .info-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 0.5rem 0;
+            border-bottom: 1px solid #eee;
+        }
+
+        h1, h2 {
+            color: #2c3e50;
+            margin: 0 0 1rem 0;
+        }
+
+        h1 {
+            font-size: 2rem;
             text-align: center;
-            background-color: #333;
-            color: white;
-            padding: 10px;
         }
 
-        .sidebar {
-            grid-column: 1 / 2;
-            background-color: #f4f4f4;
-            padding: 20px;
+        h2 {
+            font-size: 1.4rem;
+            color: #3498db;
         }
 
-        .main-content {
-            grid-column: 2 / 3;
-            padding: 20px;
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
 
-        footer {
-            grid-column: 1 / -1;
-            text-align: center;
-            background-color: #333;
-            color: white;
-            padding: 10px;
+        li {
+            padding: 0.5rem 0;
+            border-bottom: 1px solid #eee;
         }
     </style>
 </head>
 <body>
     <div class="ellipse-container">
-        <div class="ellipse"></div
+        <div class="animated-ellipse"></div>
+    </div>
+
+    <div class="resume-grid">
+        <div class="section personal-info">
+            <h1>简小丽</h1>
+            <div class="info-item"><span>年龄</span><span>26</span></div>
+            <div class="info-item"><span>性别</span><span>女</span></div>
+            <div class="info-item"><span>地址</span><span>湖南长沙 岳麓区</span></div>
+            <div class="info-item"><span>电话</span><span>135-0000-0000</span></div>
+            <div class="info-item"><span>婚姻状况</span><span>已婚</span></div>
+            <div class="info-item"><span>求职意向</span><span>区域经理</span></div>
+        </div>
+
+        <div class="section">
+            <h2>工作经历</h2>
+            <div class="experience">
+                <h3>社区服务站慢病管理员</h3>
+                <ul>
+                    <li>负责为客户进行体检并解读体检结果</li>
+                    <li>评估客户健康状况和疾病危险性</li>
+                    <li>进行糖尿病、高血压检测工作</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h3>药店店员 (四年经验)</h3>
+                <ul>
+                    <li>负责顾客咨询及销售工作</li>
+                    <li>货品管理及销售统计</li>
+                    <li>商品陈列与库存管理</li>
+                    <li>区域卫生清洁</li>
+                    <li>销售任务分解与执行</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>教育经历</h2>
+            <p>中专学历 (正在就读成人高考)</p >
+        </div>
+
+        <div class="section">
+            <h2>社会关系</h2>
+            <ul>
+                <li>家人从事教育工作</li>
+                <li>配偶拥有广泛商业人脉</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>自我评价</h2>
+            <ul>
+                <li>市场分析与诊断能力</li>
+                <li>产品与人员管理能力</li>
+                <li>营销与品牌知识</li>
+                <li>市场预测与规划能力</li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
